fixed footer alignments

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -397,18 +397,6 @@ a:visited {
     font-size: 1.6rem;
   }
 
-  #photo-credit #made-by {
-    text-align: center;
-  }
-
-  footer ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 130px;
-  }
-
   #email-submit {
     margin: -40px 20px 0 20px;
   }
@@ -421,10 +409,6 @@ a:visited {
     font-size: 0.9rem;
   }
 
-  footer ul {
-    height: 100px;
-  }
-
   footer ul li {
     padding: 0 2px;
     height: 40px;
@@ -433,6 +417,21 @@ a:visited {
   .social-icons {
     margin-top: 4px;
     margin-bottom: -3px;
+    text-align: center;
+  }
+
+  footer ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    height: 110px;
+  }
+
+  #photo-credit,
+  #made-by {
+    text-align: center;
   }
 
   a {
@@ -515,6 +514,7 @@ a:visited {
     margin-left: 20px;
     margin-right: 20px;
   }
+
   #form {
     margin-top: 50px;
   }
@@ -539,6 +539,12 @@ a:visited {
   .social-icons {
     margin-top: 3px;
     margin-bottom: -2px;
+    text-align: center;
+  }
+
+  #made-by,
+  #photo-credit {
+    text-align: center;
   }
 
   /*hamburger menu*/
